--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     "version": 2, 
     "builds": [
         {
-            "src": "subconverter/subconverter.exe",
+            "src": "subconverter/subconverter",
             "use": "now-static-bin",
             "config": {
                 "port": 25500,
@@ -15,6 +15,6 @@
         }
     ],
     "routes": [
-        {"src": "/(.*)", "dest": "subconverter/subconverter.exe"}
+        {"src": "/(.*)", "dest": "subconverter/subconverter"}
     ]
 }
