--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
     "name": "subc",
     "version": 2, 
+    "github": {
+        "silent": true
+    },
     "builds": [
         {
             "src": "subconverter/subconverter",
